aws_infrastructure/security_groups.json
{
  "us-east-1": {
    "SecurityGroups": [
      {
        "GroupId": "sg-0a41b0a8050ad2169",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-0a41b0a8050ad2169",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-2",
        "Description": "launch-wizard-2 created 2025-12-15T12:51:38.217Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 11434,
            "ToPort": 11434,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-039fde856978108cb",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-039fde856978108cb",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-3",
        "Description": "launch-wizard-3 created 2025-12-15T14:29:08.428Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 11434,
            "ToPort": 11434,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-07328d82f7e227534",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-07328d82f7e227534",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-1",
        "Description": "launch-wizard-1 created 2025-12-02T12:57:12.429Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 3001,
            "ToPort": 3001,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8501,
            "ToPort": 8501,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-04a915ed51e2fbfcb",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-04a915ed51e2fbfcb",
        "OwnerId": "591671455886",
        "GroupName": "default",
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [
              {
                "UserId": "591671455886",
                "GroupId": "sg-04a915ed51e2fbfcb"
              }
            ],
            "IpRanges": [],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0eec29c1c964c91ff",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-0eec29c1c964c91ff",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-4",
        "Description": "launch-wizard-4 created 2025-12-17T02:54:32.252Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 11434,
            "ToPort": 11434,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0348198772d5c257f",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-0348198772d5c257f",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-5",
        "Description": "launch-wizard-5 created 2025-12-19T03:40:48.206Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 11434,
            "ToPort": 11434,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-085490dd7be45223e",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-085490dd7be45223e",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-7",
        "Description": "launch-wizard-7 created 2026-02-15T09:32:07.468Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8502,
            "ToPort": 8502,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0129c5d70da3baf81",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-0129c5d70da3baf81",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-9",
        "Description": "launch-wizard-9 created 2026-03-24T06:51:39.234Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-014da16c3951732e4",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-014da16c3951732e4",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-8",
        "Description": "launch-wizard-8 created 2026-03-01T12:48:50.291Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 3002,
            "ToPort": 3002,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 3004,
            "ToPort": 3004,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 3000,
            "ToPort": 3000,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 1337,
            "ToPort": 1337,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0bb6f6dde99b9f8a8",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-09b3b9e0104f95fa9",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:591671455886:security-group/sg-0bb6f6dde99b9f8a8",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-6",
        "Description": "launch-wizard-6 created 2025-12-20T06:27:29.126Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 11434,
            "ToPort": 11434,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      }
    ],
    "ResponseMetadata": {
      "RequestId": "ea6a49f6-b24a-43f4-95a2-82b329370c74",
      "HTTPStatusCode": 200,
      "HTTPHeaders": {
        "x-amzn-requestid": "ea6a49f6-b24a-43f4-95a2-82b329370c74",
        "cache-control": "no-cache, no-store",
        "strict-transport-security": "max-age=31536000; includeSubDomains",
        "vary": "accept-encoding",
        "content-type": "text/xml;charset=UTF-8",
        "transfer-encoding": "chunked",
        "date": "Tue, 01 Sep 2026 10:17:42 GMT",
        "server": "AmazonEC2"
      },
      "RetryAttempts": 0
    }
  },
  "ap-southeast-7": {
    "SecurityGroups": [
      {
        "GroupId": "sg-0580356d4462689ea",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-0d41e604f95be431e",
        "SecurityGroupArn": "arn:aws:ec2:ap-southeast-7:591671455886:security-group/sg-0580356d4462689ea",
        "OwnerId": "591671455886",
        "GroupName": "default",
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [
              {
                "UserId": "591671455886",
                "GroupId": "sg-0580356d4462689ea"
              }
            ],
            "IpRanges": [],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-050ee5dfba30f3521",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-0d41e604f95be431e",
        "SecurityGroupArn": "arn:aws:ec2:ap-southeast-7:591671455886:security-group/sg-050ee5dfba30f3521",
        "OwnerId": "591671455886",
        "GroupName": "add_streamlit",
        "Description": "Typical but add streamlit port",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8501,
            "ToPort": 8501,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0de6c22aaec49d824",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-0d41e604f95be431e",
        "SecurityGroupArn": "arn:aws:ec2:ap-southeast-7:591671455886:security-group/sg-0de6c22aaec49d824",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-1",
        "Description": "launch-wizard-1 created 2025-09-30T08:48:00.563Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0261e737ebf573b7e",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-0d41e604f95be431e",
        "SecurityGroupArn": "arn:aws:ec2:ap-southeast-7:591671455886:security-group/sg-0261e737ebf573b7e",
        "OwnerId": "591671455886",
        "GroupName": "launch-wizard-2",
        "Description": "launch-wizard-2 created 2025-10-01T03:28:01.738Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      }
    ],
    "ResponseMetadata": {
      "RequestId": "92bf6680-c304-472b-a00a-ea31472c2527",
      "HTTPStatusCode": 200,
      "HTTPHeaders": {
        "x-amzn-requestid": "92bf6680-c304-472b-a00a-ea31472c2527",
        "cache-control": "no-cache, no-store",
        "strict-transport-security": "max-age=31536000; includeSubDomains",
        "vary": "accept-encoding",
        "content-type": "text/xml;charset=UTF-8",
        "content-length": "4099",
        "date": "Tue, 01 Sep 2026 10:17:42 GMT",
        "server": "AmazonEC2"
      },
      "RetryAttempts": 0
    }
  },
  "ap-southeast-1": {
    "SecurityGroups": [
      {
        "GroupId": "sg-04e78ef6ce5c52710",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-05d8facf78b2ac008",
        "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:591671455886:security-group/sg-04e78ef6ce5c52710",
        "OwnerId": "591671455886",
        "GroupName": "default",
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [
              {
                "UserId": "591671455886",
                "GroupId": "sg-04e78ef6ce5c52710"
              }
            ],
            "IpRanges": [],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      }
    ],
    "ResponseMetadata": {
      "RequestId": "cd21cd62-00c5-44ee-93f6-caac2cc0948f",
      "HTTPStatusCode": 200,
      "HTTPHeaders": {
        "x-amzn-requestid": "cd21cd62-00c5-44ee-93f6-caac2cc0948f",
        "cache-control": "no-cache, no-store",
        "strict-transport-security": "max-age=31536000; includeSubDomains",
        "content-type": "text/xml;charset=UTF-8",
        "content-length": "965",
        "date": "Tue, 01 Sep 2026 10:17:43 GMT",
        "server": "AmazonEC2"
      },
      "RetryAttempts": 0
    }
  }
}
